# BoundaryCIP

./: CMakeLists.txt  README.md
pde_demos/: circleInCircle.in2d  demos.py  stokes.py
utils/: CMakeLists.txt  boundlaplace.cpp  cipintegrator.cpp  python.cpp  specialcoef.cpp  specialcoef.hpp  surffacetfes.cpp  surffacetfes.hpp
